# newton-sos

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  README_PY.md  build.rs  pyproject.toml
.github/workflows/: CI.yml
benchmark/: benchmark.py  plot.py
examples/: polynomial.rs
newton_sos/: __init__.py  tests.py
src/: lib.rs  problem.rs  py_problem.rs  py_solver.rs  solver.rs  tests.rs
