[package]
name = "newton-sos"
version = "0.1.0"
edition = "2024"

[lib]
name = "newton_sos"
crate-type = ["cdylib"]

[dependencies]
faer = "0.23.2"
numpy = "0.24.0"
pyo3 = { version = "0.24.1", features = ["extension-module"] }
rand = { version = "0.9.1" }

[profile.dev.package.faer]
opt-level = 3

[dev-dependencies]
approx = "0.5.0"