[package]
name = "newton-sos"
version = "0.1.0"
edition = "2024"

[lib]
name = "newton_sos"
crate-type = ["cdylib", "rlib"]

[features]
python = ["pyo3", "numpy"]
default = []

[dependencies]
faer = "0.23.2"
faer-ext = { version = "0.7.1", features = ["ndarray"] }
numpy = { version = "0.26.0", optional = true }
pyo3 = { version = "0.26.0", features = ["extension-module"], optional = true }
rayon = "1.11.0"

[profile.dev.package.faer]
opt-level = 3

[dev-dependencies]
approx = "0.5.0"
